Hero section Added

--- a/index.html
+++ b/index.html
@@ -29,10 +29,17 @@
                 <span class="cart-badge">3</span>
             </div>
             <div class="hamburger" id="hamburger">
-                <i class="fas fa-bars"></i>
+                <i class="fa-solid fa-bars"></i>
             </div>
         </div>
     </header>
+    <section class="hero">
+        <div class="hero-content">
+            <h1>Biggest Sale of the Year!</h1>
+            <p>Up to 70% off on selected products. Don’t miss out!</p>
+            <a href="#products" class="cta-button">Shop Now</a>
+        </div>
+    </section>
     <script src="scripts/app.js"></script>
 </body>
 </html>
