--- a/products.html
+++ b/products.html
@@ -16,8 +16,8 @@
     <header>
         <div class="logo">Store.</div>
         <nav class="navbar" id="navbar">
-            <a href="#" class="active">Home</a>
-            <a href="products.html" >Products</a>
+            <a href="index.html" >Home</a>
+            <a href="#" class="active">Products</a>
             <a href="#" >About</a>
             <a href="#" >Contact</a>
         </nav>
@@ -33,11 +33,33 @@
             </div>
         </div>
     </header>
-    <section class="hero">
-        <div class="hero-content">
-            <h1>Biggest Sale of the Year!</h1>
-            <p>Up to 70% off on selected products. Don’t miss out!</p>
-            <a href="products.html" class="cta-button">Shop Now</a>
+    <section class="products">
+        <h1 class="section-title">Featured Products</h1>
+        <div class="product-grid">
+            <div class="product-card">
+                <img src="assets/images/smartwatch.png" alt="Product 1">
+                <h3>Smart Watch</h3>
+                <p>$99.99</p>
+                <button class="buy-btn">Buy Now</button>
+            </div>
+            <div class="product-card">
+                <img src="assets/images/headphones.png" alt="Product 2">
+                <h3>Headphones</h3>
+                <p>$59.99</p>
+                <button class="buy-btn">Buy Now</button>
+            </div>
+            <div class="product-card">
+                <img src="assets/images/smartphone.png" alt="Product 3">
+                <h3>Smartphone</h3>
+                <p>$599</p>
+                <button class="buy-btn">Buy Now</button>
+            </div>
+            <div class="product-card">
+                <img src="assets/images/smarttv.png" alt="Product 4">
+                <h3>Smart TV</h3>
+                <p>$999</p>
+                <button class="buy-btn">Buy Now</button>
+            </div>
         </div>
     </section>
     <script src="scripts/app.js"></script>
