--- a/products.html
+++ b/products.html
@@ -35,31 +35,8 @@
     </header>
     <section class="products">
         <h1 class="section-title">Featured Products</h1>
-        <div class="product-grid">
-            <div class="product-card">
-                <img src="assets/images/smartwatch.png" alt="Product 1">
-                <h3>Smart Watch</h3>
-                <p>$99.99</p>
-                <button class="buy-btn">Buy Now</button>
-            </div>
-            <div class="product-card">
-                <img src="assets/images/headphones.png" alt="Product 2">
-                <h3>Headphones</h3>
-                <p>$59.99</p>
-                <button class="buy-btn">Buy Now</button>
-            </div>
-            <div class="product-card">
-                <img src="assets/images/smartphone.png" alt="Product 3">
-                <h3>Smartphone</h3>
-                <p>$599</p>
-                <button class="buy-btn">Buy Now</button>
-            </div>
-            <div class="product-card">
-                <img src="assets/images/smarttv.png" alt="Product 4">
-                <h3>Smart TV</h3>
-                <p>$999</p>
-                <button class="buy-btn">Buy Now</button>
-            </div>
+        <div class="product-grid" id="productGrid">
+            <p id="loading">Loading products...</p>
         </div>
     </section>
     <script src="scripts/app.js"></script>
